2007-02-15  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/figure.m: Doc fix.

2007-02-14  Thomas Weber  <thomas.weber.mail@gmail.com>

	* audio/wavread.m, audio/wavwrite.m: Use types with specific sizes
	for reading and writing data.  New tests.  Improve rounding.

2007-02-13  John W. Eaton  <jwe@octave.org>

	* plot/stem.m: New file, adapted from OctPlot.
	* plot/Makefile.in (SOURCES_M): Add it to the list.

	* plot/__errcomm__.m, plot/__plr1__.m, plot/__plr2__.m,
	plot/__plt1__.m, plot/__plt2__.m, plot/__plt2mm__.m,
	plot/__plt2mv__.m, plot/__plt2ss__.m, plot/__plt2vm__.m,
	plot/__plt2vv__.m, plot/__plt__.m, plot/loglog.m,
	plot/loglogerr.m, plot/plot.m, plot/plot3.m, plot/polar.m,
	plot/semilogx.m, plot/semilogxerr.m, plot/semilogy.m,
	plot/semilogyerr.m: Return handles to line objects.

2007-02-11  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_close_all.m: New file.
	* plot/Makefile.in (SOURCES_M): Add it to the list.

2007-02-10  John W. Eaton  <jwe@octave.org>

	* plot/drawnow.m: Arrange for plot streams to be close on exit.
	* plot/__uiobject_globals__.m: Don't call mlock.

	* plot/drawnow.m: Only check for DISPLAY if isunix returns true.
	* plot/__uiobject_delete__.m: Send quit command and flush stream
	before calling pclose.

2007-02-09  John W. Eaton  <jwe@octave.org>

	* plot/subplot.m: Delete spurious call to axes.

	* plot/figure.m: Call drawnow for current figure before creating
	or switching to a new figure.
	* plot/__uiobject_init_figure__.in: Handle empty arg the same as
	nargin == 0 case.

	* testfun/assert.m: Try to avoid problems when comparisons involve
	strange values like Inf+NaNi.

2007-02-08  John W. Eaton  <jwe@octave.org>

	* plot/drawnow.m: Use gnuplot_binary() instead of just "gnuplot"
	and check gnuplot_use_title_option instead of just assuming -title
	works.  From Michael Goffioul <michael.goffioul@swing.be>.

	* Makefile.in (DISTFILES): Add move-if-change to the list.

	* audio/Makefile.in, control/base/Makefile.in,